--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 			</plugin>
 		</plugins>
 		<plugins>
+	<plugins>		
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -77,6 +78,7 @@
                 <target>1.8</target>
             </configuration>
         </plugin>
+	</plugins>
 		<finalName>${project.name}test</finalName>
 	</build>
 
